add tasks queue query options
